fixed Humankind layout bugs

--- a/UI/sections/ResultsSection/styles/humankind.scss
+++ b/UI/sections/ResultsSection/styles/humankind.scss
@@ -1,5 +1,6 @@
 .humankind {
   padding-bottom: 70px;
+  background-color: $gray50;
 
   [data-description] {
     max-width: 511px;
